# lmsai

./: .gitignore  QWEN.md  README.md  database-connection.md  docker-compose.pgadmin.yml  docker-compose.tasks.yml  docker-compose.yml  test_api.py
backend/: .env.example  .flake8  .pre-commit-config.yaml  AI_CLIENT_IMPLEMENTATION.md  AI_CLI_GUIDE.md  AI_CLI_IMPLEMENTATION_SUMMARY.md  API_TEST_RESULTS.md  CLI_USAGE_GUIDE.md  COURSE_CLI_SUMMARY.md  DATABASE_CLI_GUIDE.md  DATABASE_SETUP_GUIDE.md  Dockerfile.dev  EXCEPTION_HANDLING_GUIDE.md  EXCEPTION_SYSTEM_SUMMARY.md  GUIDE_TESTS.md  GUIDE_TEST_CREATION_COURS.md  LOGGING_MIDDLEWARE_GUIDE.md  MODEL_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TESTING_SUMMARY.md  RATE_LIMITING_GUIDE.md  SECURITY_MIDDLEWARE_GUIDE.md  VECTOR_CLIENT_IMPLEMENTATION.md  alembic.ini  api_courses_real.py  api_vraiment_simulee.py  api_with_database.py  cli.py  cli_runner.py  db  demo_ai_client.py  example_cli_usage.py  exemple_creation_cours_reel.md  main_fixed.py  minimal_exception_test.py  pyproject.toml  pytest-performance.ini  pytest.ini  quickstart_validation_report.json  requirements.txt  run_tests_tdd_verification.py  (+11 more)
backend/.serena/memories/: code_style.md  project_overview.md  suggested_commands.md
backend/alembic/: env.py
backend/docs/: README.md  api.md  api_performance_addendum.md  authentication.md  examples.md  integration-guide.md
backend/scripts/: code_quality_check.py  init-db.sql  run_performance_tests.py
backend/src/: main.py  main_simple.py  main_with_rate_limiting.py  main_with_security.py
backend/src/api/: __init__.py
backend/src/auth/: README.md  __init__.py  api_key_auth.py  integration_example.py  management.py  middleware.py  migrations.py  router.py  tests.py
backend/src/cli/: __init__.py  __main__.py  ai.py  courses.py  db.py
backend/src/config/: __init__.py  logging_config.py
backend/src/core/: __init__.py  config.py  exceptions.py
backend/src/database/: __init__.py  session.py
backend/src/integrations/: README.md  __init__.py  ai_client.py  config.py  example_usage.py  vector_client.py
backend/src/middleware/: __init__.py  auth.py  integration_example.py  logging.py  rate_limiting.py  (+1 more)
backend/tests/: conftest.py
(+144 files in other folders)
